--- a/.github/workflows/activation.yml
+++ b/.github/workflows/activation.yml
@@ -1,18 +1,20 @@
-name: Get Unity license activation file 🔐
+name: Acquire activation file
 
-on: workflow_dispatch
+on:
+  workflow_dispatch:
 
 jobs:
-  requestManualActivationFile:
+  activation:
     name: Request manual activation file 🔑
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-
-      - uses: game-ci/unity-request-activation-file@v2
-        id: getManualLicenseFile
-
-      - uses: actions/upload-artifact@v2
+      # Request manual activation file
+      - name: Unity - Request Activation File
+        id: requestActivationFile
+        uses: game-ci/unity-request-activation-file@v2.0-alpha-1
+      - name: Upload activation file
+        uses: actions/upload-artifact@v2
         with:
-          name: Manual Activation File
-          path: ${{ steps.getManualLicenseFile.outputs.filePath }}
+          name: ${{ steps.requestActivationFile.outputs.filePath }}
+          path: ${{ steps.requestActivationFile.outputs.filePath }}
+          retention-days: 3
