--- a/.github/workflows/activation.yml
+++ b/.github/workflows/activation.yml
@@ -16,3 +16,5 @@ jobs:
         with:
           name: ${{ steps.getManualLicenseFile.outputs.filePath }}
           path: ${{ steps.getManualLicenseFile.outputs.filePath }}
+      - name: Unity - Activate
+      uses: game-ci/unity-activate@v1.3   
