--- a/.github/workflows/activation.yml
+++ b/.github/workflows/activation.yml
@@ -8,4 +8,6 @@ jobs:
       - name: Activate Unity
         uses: webbertakken/unity-activate@v1
         env:
-          UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
+          UNITY_EMAIL:    ${{ secrets.UNITY_EMAIL }}
+          UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
+          UNITY_SERIAL:   ${{ secrets.UNITY_SERIAL }}
