--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,7 @@ jobs:
     name: Build project
     runs-on: ubuntu-latest
     steps:
-      - uses: game-ci/unity-builder@v2
+      - uses: game-ci/unity-builder@v2.0.0-alpha-14
         env:
           UNITY_EMAIL: ${{ secrets.UNITY_EMAIL }}
           UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
