--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,21 @@
 name: Build project
 on: [push]
 jobs:
+  uploadProject:
+    permissions:
+      contents: 'read'
+      id-token: 'write'
+
+    steps:
+    - uses: 'actions/checkout@v2'
+
+    - id: 'auth'
+      name: 'Authenticate to Google Cloud'
+      uses: 'google-github-actions/auth@v0'
+      with:
+        workload_identity_provider: 'projects/744153426878/locations/global/workloadIdentityPools/my-pool/providers/my-provider'
+        service_account: 'teamapple@eighth-codex-340614.iam.gserviceaccount.com'  
+
   buildProject:
     name: Build project
     runs-on: ubuntu-latest
@@ -26,4 +41,5 @@ jobs:
         with:
           name: Build
           path: build
+      
           
