--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,6 +2,10 @@ name: Build project
 on: [push]
 jobs:
   uploadProject:
+  
+    name: Upload project
+    runs-on: ubuntu-latest
+    
     permissions:
       contents: 'read'
       id-token: 'write'
