--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,9 +6,9 @@ jobs:
     name: Build project
     runs-on: ubuntu-latest
     
-    permissions:
-      contents: 'read'
-      id-token: 'write'    
+    #permissions:
+     # contents: 'read'
+      #id-token: 'write'    
     
     steps:
       - uses: actions/checkout@v2
@@ -22,12 +22,12 @@ jobs:
             Library-SpaceBall-
             Library-
 
-    - id: 'auth'
-      name: 'Authenticate to Google Cloud'
-      uses: 'google-github-actions/auth@v0'
-      with:
-        workload_identity_provider: 'projects/744153426878/locations/global/workloadIdentityPools/my-pool/providers/my-provider'
-        service_account: 'teamapple@eighth-codex-340614.iam.gserviceaccount.com'  
+    #- id: 'auth'
+     # name: 'Authenticate to Google Cloud'
+      #uses: 'google-github-actions/auth@v0'
+    #  with:
+     #   workload_identity_provider: 'projects/744153426878/locations/global/workloadIdentityPools/my-pool/providers/my-provider'
+      #  service_account: 'teamapple@eighth-codex-340614.iam.gserviceaccount.com'  
             
       - uses: game-ci/unity-builder@v2.0.0-alpha-14
         env:
