--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,9 +6,9 @@ jobs:
     name: Build project
     runs-on: ubuntu-latest
     
-    #permissions:
-     # contents: 'read'
-      #id-token: 'write'    
+    permissions:
+      contents: 'read'
+      id-token: 'write'    
     
     steps:
       - uses: actions/checkout@v2
