--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,14 @@ jobs:
       - uses: actions/checkout@v2
         with:
           lfs: true
+          
+    - id: 'auth'
+      name: 'Authenticate to Google Cloud'
+      uses: 'google-github-actions/auth@v0'
+      with:
+        workload_identity_provider: 'projects/744153426878/locations/global/workloadIdentityPools/my-pool/providers/my-provider'
+        service_account: 'teamapple@eighth-codex-340614.iam.gserviceaccount.com'           
+          
       - uses: actions/cache@v2
         with:
           path: Library
@@ -21,13 +29,6 @@ jobs:
           restore-keys: |
             Library-SpaceBall-
             Library-
-
-    #- id: 'auth'
-     # name: 'Authenticate to Google Cloud'
-      #uses: 'google-github-actions/auth@v0'
-    #  with:
-     #   workload_identity_provider: 'projects/744153426878/locations/global/workloadIdentityPools/my-pool/providers/my-provider'
-      #  service_account: 'teamapple@eighth-codex-340614.iam.gserviceaccount.com'  
             
       - uses: game-ci/unity-builder@v2.0.0-alpha-14
         env:
