--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,11 +39,13 @@ jobs:
           workload_identity_provider: 'projects/744153426878/locations/global/workloadIdentityPools/my-pool/providers/my-provider'
           service_account: 'teamapple@eighth-codex-340614.iam.gserviceaccount.com'  
           
-      - id: 'upload-file'
+      - id: 'upload-files'
         uses: 'google-github-actions/upload-cloud-storage@v0'
         with:
           path: build
-          destination: 'www.spaceball.co.uk/Build/build'         
+          destination: 'www.spaceball.co.uk'
+          parent: false
+          
           
       - uses: actions/upload-artifact@v2
         with:
