--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,7 +42,7 @@ jobs:
       - id: 'upload-files'
         uses: 'google-github-actions/upload-cloud-storage@v0'
         with:
-          path: build
+          path: build/WebGL/WebGL/*
           destination: 'www.spaceball.co.uk'
           parent: false
           
