--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,9 +34,8 @@ jobs:
           buildsPath: projectBuild
 
           
-      - uses: actions/upload-artifact@v2
-        with:
-          name: Build
-          path: build
-      
+#      - uses: actions/upload-artifact@v2
+ #       with:
+  #        name: Build
+   #       path: build  
           
