--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,11 +31,10 @@ jobs:
           UNITY_SERIAL: ${{ secrets.UNITY_SERIAL }}
         with:
           targetPlatform: WebGL
-          buildsPath: projectBuild
 
           
-#      - uses: actions/upload-artifact@v2
- #       with:
-  #        name: Build
-   #       path: build  
+      - uses: actions/upload-artifact@v2
+        with:
+          name: Build
+          path: build  
           
