--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,3 +38,10 @@ jobs:
           name: Build
           path: build  
           
+      #- name: Deploy
+       # uses: peaceiris/actions-gh-pages@v3
+        #if: ${{ github.ref == 'refs/heads/main' }}
+      #  with:
+       #   github_token: ${{ secrets.GITHUB_TOKEN }}
+        #  publish_dir: build/WebGL        
+          
