--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,5 +43,5 @@ jobs:
         if: ${{ github.ref == 'refs/heads/main' }}
         with:
           github_token: ${{ secrets.GH_PAT }}
-          publish_dir: build/WebGL
+          publish_dir: build/WebGL/WebGL
           destination_dir: docs
