--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,9 +12,10 @@ jobs:
       id-token: 'write'    
     
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
         with:
           lfs: true
+          ref: 'EmergencyBranch'
       - uses: actions/cache@v2
         with:
           path: Library
