--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -5,6 +5,7 @@
     "com.unity.2d.tilemap": "1.0.0",
     "com.unity.2d.tilemap.extras": "1.8.1-preview",
     "com.unity.animation.rigging": "1.0.3",
+    "com.unity.cinemachine": "2.6.11",
     "com.unity.collab-proxy": "1.15.9",
     "com.unity.ide.rider": "2.0.7",
     "com.unity.ide.visualstudio": "2.0.12",
