--- a/.gitignore
+++ b/.gitignore
@@ -74,3 +74,164 @@ crashlytics-build.properties
 
 # Ignore generated credentials from google-github-actions/auth
 gha-creds-*.json
+MonoBleedingEdge/EmbedRuntime/mono-2.0-bdwgc.dll
+MonoBleedingEdge/EmbedRuntime/MonoPosixHelper.dll
+MonoBleedingEdge/etc/mono/2.0/Browsers/Compat.browser
+MonoBleedingEdge/etc/mono/2.0/DefaultWsdlHelpGenerator.aspx
+MonoBleedingEdge/etc/mono/2.0/machine.config
+MonoBleedingEdge/etc/mono/2.0/settings.map
+MonoBleedingEdge/etc/mono/2.0/web.config
+MonoBleedingEdge/etc/mono/4.0/Browsers/Compat.browser
+MonoBleedingEdge/etc/mono/4.0/DefaultWsdlHelpGenerator.aspx
+MonoBleedingEdge/etc/mono/4.0/machine.config
+MonoBleedingEdge/etc/mono/4.0/settings.map
+MonoBleedingEdge/etc/mono/4.0/web.config
+MonoBleedingEdge/etc/mono/4.5/Browsers/Compat.browser
+MonoBleedingEdge/etc/mono/4.5/DefaultWsdlHelpGenerator.aspx
+MonoBleedingEdge/etc/mono/4.5/machine.config
+MonoBleedingEdge/etc/mono/4.5/settings.map
+MonoBleedingEdge/etc/mono/4.5/web.config
+MonoBleedingEdge/etc/mono/browscap.ini
+MonoBleedingEdge/etc/mono/config
+SpaceBall.exe
+SpaceBall_Data/app.info
+SpaceBall_Data/boot.config
+SpaceBall_Data/globalgamemanagers
+SpaceBall_Data/globalgamemanagers.assets
+SpaceBall_Data/globalgamemanagers.assets.resS
+SpaceBall_Data/level0
+SpaceBall_Data/level0.resS
+SpaceBall_Data/level1
+SpaceBall_Data/level1.resS
+SpaceBall_Data/Managed/Assembly-CSharp.dll
+SpaceBall_Data/Managed/Cinemachine.dll
+SpaceBall_Data/Managed/Mono.Security.dll
+SpaceBall_Data/Managed/mscorlib.dll
+SpaceBall_Data/Managed/netstandard.dll
+SpaceBall_Data/Managed/Newtonsoft.Json.dll
+SpaceBall_Data/Managed/Photon3Unity3D.dll
+SpaceBall_Data/Managed/PhotonChat.dll
+SpaceBall_Data/Managed/PhotonRealtime.dll
+SpaceBall_Data/Managed/PhotonUnityNetworking.Demos.dll
+SpaceBall_Data/Managed/PhotonUnityNetworking.dll
+SpaceBall_Data/Managed/PhotonUnityNetworking.Utilities.dll
+SpaceBall_Data/Managed/System.ComponentModel.Composition.dll
+SpaceBall_Data/Managed/System.Configuration.dll
+SpaceBall_Data/Managed/System.Core.dll
+SpaceBall_Data/Managed/System.Data.dll
+SpaceBall_Data/Managed/System.Diagnostics.StackTrace.dll
+SpaceBall_Data/Managed/System.dll
+SpaceBall_Data/Managed/System.Drawing.dll
+SpaceBall_Data/Managed/System.EnterpriseServices.dll
+SpaceBall_Data/Managed/System.Globalization.Extensions.dll
+SpaceBall_Data/Managed/System.IO.Compression.dll
+SpaceBall_Data/Managed/System.IO.Compression.FileSystem.dll
+SpaceBall_Data/Managed/System.Net.Http.dll
+SpaceBall_Data/Managed/System.Numerics.dll
+SpaceBall_Data/Managed/System.Runtime.dll
+SpaceBall_Data/Managed/System.Runtime.Serialization.dll
+SpaceBall_Data/Managed/System.Runtime.Serialization.Xml.dll
+SpaceBall_Data/Managed/System.ServiceModel.Internals.dll
+SpaceBall_Data/Managed/System.Transactions.dll
+SpaceBall_Data/Managed/System.Xml.dll
+SpaceBall_Data/Managed/System.Xml.Linq.dll
+SpaceBall_Data/Managed/System.Xml.XPath.XDocument.dll
+SpaceBall_Data/Managed/Unity.2D.Common.Runtime.dll
+SpaceBall_Data/Managed/Unity.2D.SpriteShape.Runtime.dll
+SpaceBall_Data/Managed/Unity.2D.Tilemap.Extras.dll
+SpaceBall_Data/Managed/Unity.Animation.Rigging.dll
+SpaceBall_Data/Managed/Unity.Burst.dll
+SpaceBall_Data/Managed/Unity.Burst.Unsafe.dll
+SpaceBall_Data/Managed/Unity.InternalAPIEngineBridge.001.dll
+SpaceBall_Data/Managed/Unity.Mathematics.dll
+SpaceBall_Data/Managed/Unity.Postprocessing.Runtime.dll
+SpaceBall_Data/Managed/Unity.RenderPipeline.Universal.ShaderLibrary.dll
+SpaceBall_Data/Managed/Unity.RenderPipelines.Core.Runtime.dll
+SpaceBall_Data/Managed/Unity.RenderPipelines.Core.ShaderLibrary.dll
+SpaceBall_Data/Managed/Unity.RenderPipelines.ShaderGraph.ShaderGraphLibrary.dll
+SpaceBall_Data/Managed/Unity.RenderPipelines.Universal.Runtime.dll
+SpaceBall_Data/Managed/Unity.RenderPipelines.Universal.Shaders.dll
+SpaceBall_Data/Managed/Unity.TextMeshPro.dll
+SpaceBall_Data/Managed/Unity.Timeline.dll
+SpaceBall_Data/Managed/UnityEngine.AccessibilityModule.dll
+SpaceBall_Data/Managed/UnityEngine.AIModule.dll
+SpaceBall_Data/Managed/UnityEngine.AndroidJNIModule.dll
+SpaceBall_Data/Managed/UnityEngine.AnimationModule.dll
+SpaceBall_Data/Managed/UnityEngine.ARModule.dll
+SpaceBall_Data/Managed/UnityEngine.AssetBundleModule.dll
+SpaceBall_Data/Managed/UnityEngine.AudioModule.dll
+SpaceBall_Data/Managed/UnityEngine.ClothModule.dll
+SpaceBall_Data/Managed/UnityEngine.ClusterInputModule.dll
+SpaceBall_Data/Managed/UnityEngine.ClusterRendererModule.dll
+SpaceBall_Data/Managed/UnityEngine.CoreModule.dll
+SpaceBall_Data/Managed/UnityEngine.CrashReportingModule.dll
+SpaceBall_Data/Managed/UnityEngine.DirectorModule.dll
+SpaceBall_Data/Managed/UnityEngine.dll
+SpaceBall_Data/Managed/UnityEngine.DSPGraphModule.dll
+SpaceBall_Data/Managed/UnityEngine.GameCenterModule.dll
+SpaceBall_Data/Managed/UnityEngine.GIModule.dll
+SpaceBall_Data/Managed/UnityEngine.GridModule.dll
+SpaceBall_Data/Managed/UnityEngine.HotReloadModule.dll
+SpaceBall_Data/Managed/UnityEngine.ImageConversionModule.dll
+SpaceBall_Data/Managed/UnityEngine.IMGUIModule.dll
+SpaceBall_Data/Managed/UnityEngine.InputLegacyModule.dll
+SpaceBall_Data/Managed/UnityEngine.InputModule.dll
+SpaceBall_Data/Managed/UnityEngine.JSONSerializeModule.dll
+SpaceBall_Data/Managed/UnityEngine.LocalizationModule.dll
+SpaceBall_Data/Managed/UnityEngine.ParticleSystemModule.dll
+SpaceBall_Data/Managed/UnityEngine.PerformanceReportingModule.dll
+SpaceBall_Data/Managed/UnityEngine.Physics2DModule.dll
+SpaceBall_Data/Managed/UnityEngine.PhysicsModule.dll
+SpaceBall_Data/Managed/UnityEngine.ProfilerModule.dll
+SpaceBall_Data/Managed/UnityEngine.RuntimeInitializeOnLoadManagerInitializerModule.dll
+SpaceBall_Data/Managed/UnityEngine.ScreenCaptureModule.dll
+SpaceBall_Data/Managed/UnityEngine.SharedInternalsModule.dll
+SpaceBall_Data/Managed/UnityEngine.SpriteMaskModule.dll
+SpaceBall_Data/Managed/UnityEngine.SpriteShapeModule.dll
+SpaceBall_Data/Managed/UnityEngine.StreamingModule.dll
+SpaceBall_Data/Managed/UnityEngine.SubstanceModule.dll
+SpaceBall_Data/Managed/UnityEngine.SubsystemsModule.dll
+SpaceBall_Data/Managed/UnityEngine.TerrainModule.dll
+SpaceBall_Data/Managed/UnityEngine.TerrainPhysicsModule.dll
+SpaceBall_Data/Managed/UnityEngine.TextCoreModule.dll
+SpaceBall_Data/Managed/UnityEngine.TextRenderingModule.dll
+SpaceBall_Data/Managed/UnityEngine.TilemapModule.dll
+SpaceBall_Data/Managed/UnityEngine.TLSModule.dll
+SpaceBall_Data/Managed/UnityEngine.UI.dll
+SpaceBall_Data/Managed/UnityEngine.UIElementsModule.dll
+SpaceBall_Data/Managed/UnityEngine.UIElementsNativeModule.dll
+SpaceBall_Data/Managed/UnityEngine.UIModule.dll
+SpaceBall_Data/Managed/UnityEngine.UmbraModule.dll
+SpaceBall_Data/Managed/UnityEngine.UNETModule.dll
+SpaceBall_Data/Managed/UnityEngine.UnityAnalyticsModule.dll
+SpaceBall_Data/Managed/UnityEngine.UnityConnectModule.dll
+SpaceBall_Data/Managed/UnityEngine.UnityCurlModule.dll
+SpaceBall_Data/Managed/UnityEngine.UnityTestProtocolModule.dll
+SpaceBall_Data/Managed/UnityEngine.UnityWebRequestAssetBundleModule.dll
+SpaceBall_Data/Managed/UnityEngine.UnityWebRequestAudioModule.dll
+SpaceBall_Data/Managed/UnityEngine.UnityWebRequestModule.dll
+SpaceBall_Data/Managed/UnityEngine.UnityWebRequestTextureModule.dll
+SpaceBall_Data/Managed/UnityEngine.UnityWebRequestWWWModule.dll
+SpaceBall_Data/Managed/UnityEngine.VehiclesModule.dll
+SpaceBall_Data/Managed/UnityEngine.VFXModule.dll
+SpaceBall_Data/Managed/UnityEngine.VideoModule.dll
+SpaceBall_Data/Managed/UnityEngine.VirtualTexturingModule.dll
+SpaceBall_Data/Managed/UnityEngine.VRModule.dll
+SpaceBall_Data/Managed/UnityEngine.WindModule.dll
+SpaceBall_Data/Managed/UnityEngine.XRModule.dll
+SpaceBall_Data/Managed/websocket-sharp.dll
+SpaceBall_Data/Plugins/x86_64/lib_burst_generated.dll
+SpaceBall_Data/Plugins/x86_64/lib_burst_generated.txt
+SpaceBall_Data/resources.assets
+SpaceBall_Data/resources.assets.resS
+SpaceBall_Data/Resources/unity default resources
+SpaceBall_Data/Resources/unity_builtin_extra
+SpaceBall_Data/RuntimeInitializeOnLoads.json
+SpaceBall_Data/ScriptingAssemblies.json
+SpaceBall_Data/sharedassets0.assets
+SpaceBall_Data/sharedassets0.assets.resS
+SpaceBall_Data/sharedassets0.resource
+SpaceBall_Data/sharedassets1.assets
+SpaceBall_Data/sharedassets1.assets.resS
+UnityCrashHandler64.exe
+UnityPlayer.dll
