Fixed start button for non master clinetr

--- a/.gitignore
+++ b/.gitignore
@@ -235,3 +235,4 @@ SpaceBall_Data/sharedassets1.assets
 SpaceBall_Data/sharedassets1.assets.resS
 UnityCrashHandler64.exe
 UnityPlayer.dll
+Assets/Extensions/TextMesh Pro/Resources/Fonts & Materials/immermann SDF.asset
