--- a/.gitignore
+++ b/.gitignore
@@ -236,3 +236,5 @@ SpaceBall_Data/sharedassets1.assets.resS
 UnityCrashHandler64.exe
 UnityPlayer.dll
 Assets/Extensions/TextMesh Pro/Resources/Fonts & Materials/immermann SDF.asset
+Assets/Extensions/TextMesh Pro/Resources/Fonts & Materials/immermann SDF.asset
+Assets/Extensions/TextMesh Pro/Resources/Fonts & Materials/Orbitron-Black SDF.asset
