Fixed multi flag capture at once bug (And all buffered removed)

--- a/.gitignore
+++ b/.gitignore
@@ -237,3 +237,7 @@ UnityCrashHandler64.exe
 UnityPlayer.dll
 Assets/Extensions/TextMesh Pro/Resources/Fonts & Materials/immermann SDF.asset
 Assets/Extensions/TextMesh Pro/Resources/Fonts & Materials/Orbitron-Black SDF.asset
+SpaceBall_Data/level2
+SpaceBall_Data/level2.resS
+SpaceBall_Data/sharedassets1.resource
+SpaceBall_Data/sharedassets2.assets
